--- a/src/wishlist/WishItem.module.scss
+++ b/src/wishlist/WishItem.module.scss
@@ -27,6 +27,10 @@
   border-bottom: 1px solid $lightGrayColor;
 }
 
+.info {
+  padding-right: $offsetS;
+}
+
 .name {
   font-size: $fontXL;
   margin: 0;
