--- a/src/sign-in/SignIn.module.scss
+++ b/src/sign-in/SignIn.module.scss
@@ -15,15 +15,25 @@
   &__error {
     width: 400px;
     margin-top: $offsetL;
+
+    @media (max-width: $mediaWidthM) {
+      width: 100%;
+    }
+  }
+
+  &__button {
+    display: block;
+    margin: 0 auto;
+
+    @media (max-width: $mediaWidthM) {
+      width: 100%;
+    }
   }
 }
 
 .santa {
-  margin-top: -10vh;
-
+  margin: -10vh auto 0 auto;
   max-height: 400px;
-
-  svg {
-    height: 100%;
-  }
+  height: 100%;
+  display: block;
 }
