--- a/src/wishlist/WishList.module.scss
+++ b/src/wishlist/WishList.module.scss
@@ -1,10 +1,19 @@
 @import "src/varaibles.scss";
 
-.submitBtn {
+.submitBtn, .cancelBtn {
   position: relative;
   top: 25px;
   align-self: baseline;
+  width: 200px;
+  margin-left: $offsetXS;
+
+  @media (max-width: $mediaWidthM) {
+    top: 0;
+    margin-top: $offsetS;
+    margin-left: 0;
+  }
 }
+
 
 .wishList {
   margin: $offsetL 0;
@@ -20,7 +29,7 @@
     margin-top: 0;
   }
 
-  margin-bottom: $offsetL;
+  margin-top: $offsetL;
 }
 .empty {
   padding: $offsetM 0;
